updating instance profiling logic and externalizing test inputs