@@ -1,5 +1,6 @@
 package org.bf2.performance;
 
+import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import io.fabric8.kubernetes.api.model.Node;
 import io.fabric8.kubernetes.api.model.Quantity;
@@ -21,16 +22,19 @@ import org.bf2.performance.framework.KubeClusterResource;
 import org.bf2.test.Environment;
 
 import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
+import java.io.RandomAccessFile;
+import java.math.BigDecimal;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Comparator;
+import java.util.Collections;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -81,24 +85,7 @@ public class InstanceProfiler {
         final String zookeeperSize;
     }
 
-    public enum Profile {
-        // recommended latency optimized profile
-        LATENCY("acks=1\n", "auto.offset.reset=earliest\nenable.auto.commit=false\n",
-                "min.insync.replicas=2\ncompression.type=uncompressed\ncleanup.policy=delete\nretention.ms=240000\n"),
-        // recommended latency optimized profile, but with batching disabled for throughput testing
-        LATENCY_NO_BATCHING("acks=1\nbatch.size=0\n", "auto.offset.reset=earliest\nenable.auto.commit=false\n",
-                "min.insync.replicas=2\ncompression.type=uncompressed\ncleanup.policy=delete\nretention.ms=240000\n"),
-        // using both https://www.confluent.io/blog/configure-kafka-to-minimize-latency/
-        // and https://docs.confluent.io/cloud/current/client-apps/optimizing/throughput.html#optimizing-for-throughput
-        THROUGHPUT("acks=1\nbatch.size=200000\nlinger.ms=100\n",
-                "fetch.min.bytes=100000\nauto.offset.reset=earliest\nenable.auto.commit=false\n",
-                "min.insync.replicas=2\ncompression.type=uncompressed\ncleanup.policy=delete\nretention.ms=240000\n"),
-
-        LARGE_MESSAGE("acks=1\nbatch.size=0\nmax.request.size=11534336\n",
-                "auto.offset.reset=earliest\nenable.auto.commit=false\nmax.partition.fetch.bytes=11534336\nfetch.max.bytes=11534336\n",
-                "min.insync.replicas=2\ncompression.type=uncompressed\ncleanup.policy=delete\nretention.ms=240000\nmax.message.bytes=11534336\n",
-                10*(int)ONE_MB, "src/test/resources/payload/payload-10MB.data");
-
+    public static class Profile {
         final String producerConfig;
         final String consumerConfig;
         final String topicConfig;
@@ -118,6 +105,23 @@ public class InstanceProfiler {
             this.payloadFile = payloadFile;
         }
     }
+
+    // recommended latency optimized profile
+    public static final Profile LATENCY = new Profile("acks=1\n", "auto.offset.reset=earliest\nenable.auto.commit=false\n",
+                "compression.type=uncompressed\ncleanup.policy=delete\nretention.ms=240000\n");
+    // recommended latency optimized profile, but with batching disabled for throughput testing
+    public static final Profile LATENCY_NO_BATCHING = new Profile("acks=1\nbatch.size=0\n", "auto.offset.reset=earliest\nenable.auto.commit=false\n",
+                "compression.type=uncompressed\ncleanup.policy=delete\nretention.ms=240000\n");
+
+    // using both https://www.confluent.io/blog/configure-kafka-to-minimize-latency/
+    // and https://docs.confluent.io/cloud/current/client-apps/optimizing/throughput.html#optimizing-for-throughput
+    public static final Profile THROUGHPUT = new Profile("acks=1\nbatch.size=200000\nlinger.ms=100\n",
+            "fetch.min.bytes=100000\nauto.offset.reset=earliest\nenable.auto.commit=false\n",
+            "compression.type=uncompressed\ncleanup.policy=delete\nretention.ms=240000\n");
+
+    public static final Profile PRODUCER_COMPRESSION = new Profile("acks=1\nbatch.size=200000\nlinger.ms=100\ncompression.type=lz4\n",
+            "fetch.min.bytes=100000\nauto.offset.reset=earliest\nenable.auto.commit=false\n",
+            "compression.type=uncompressed\ncleanup.policy=delete\nretention.ms=240000\n");
 
     @SuppressFBWarnings
     public static class ThroughputResult {
@@ -161,6 +165,62 @@ public class InstanceProfiler {
         public LatencyResult latency;
     }
 
+    public static class TestParameters {
+        // sizing
+        public int density = 2;
+        // if !autoSize, use the default configuration values
+        public boolean autoSize = true;
+
+        // defines the number and shape of a unit
+        public int units = 1;
+        public int maxConnectionsPerUnit = 2000;
+        public int maxPartitionsPerUnit = 1500;
+        public Quantity ingressPerUnit = Quantity.parse("50Mi");
+        public int egressMultiple = 2;
+        public Quantity dataRetentionPerUnit = Quantity.parse("1000Gi");
+
+        public Storage storage = Storage.GP2;
+
+        // expect to be well behaved at a data rate of 85% of ingress
+        // can be lower at lower ingress and higher at higher ingress -
+        // it really depends on the amount of protocol overhead, batching, etc.
+        public double quotaIngressPercentage = .85;
+
+        public String outputDirectory = "target";
+
+        public String alternativeProfile;
+
+        public Map<String, String> override;
+
+        @JsonIgnore
+        public KafkaInstanceConfiguration config;
+
+        /*
+         * see https://www.confluent.io/blog/kafka-fastest-messaging-system/#test-setup where they chose 100
+         *
+         * and from https://www.confluent.io/blog/configure-kafka-to-minimize-latency/
+         * "Purely from a throughput perspective, you should be able to get the full throughput from a Kafka cluster with an order of 10 partitions per broker."
+         *
+         * However for baselining higher partitions are not necessary or counterproductive, so we'll start with
+         * numberOfBrokers*3
+         */
+        @JsonIgnore
+        public int getNominialPartitionCount() {
+            return getNumberOfBrokers() * 3;
+        }
+
+        @JsonIgnore
+        public int getNumberOfBrokers() {
+            return units * config.getKafka().getScalingAndReplicationFactor();
+        }
+
+        @JsonIgnore
+        public int getMaxClients() {
+            // TODO: this is just using the unit value, there should be a physical capacity value as well
+            return maxConnectionsPerUnit * units / (getNumberOfBrokers() + 1);
+        }
+    }
+
     // TODO will need to hold all of the instance state as well to ensure we're continuing the same test
     public static class ProfilingResult {
         public Step completedStep;
@@ -193,40 +253,18 @@ public class InstanceProfiler {
         public TreeMap<Integer, LatencyResult> producers = new TreeMap<>();
 
         public MaxMessageResult maxMessage;
+
+        public TestParameters testParameters;
     }
 
     private static final Logger LOGGER = LogManager.getLogger(InstanceProfiler.class);
 
-    static final long ONE_MB = 1024*1024;
-    static final long ONE_GB = ONE_MB*1024;
-    static final long MAX_KAFKA_VM_SIZE = ONE_GB*6; // https://docs.confluent.io/platform/current/kafka/deployment.html#memory
-    static final long MIN_BROKER_VM_SIZE = ONE_GB/2;
+    static final long ONE_MB = 1024 * 1024;
+    static final long ONE_GB = ONE_MB * 1024;
+    static final long MAX_KAFKA_VM_SIZE = ONE_GB * 6; // https://docs.confluent.io/platform/current/kafka/deployment.html#memory
+    static final long MIN_BROKER_VM_SIZE = ONE_GB / 2;
 
-    // streaming unit definition - to be externalized
-    static int MAX_CONNECTIONS = 2000;
-    static int INGRESS=50;
-    static int EGRESS_MULTIPLE=2;
-    static int GIGS = 1000;
-
-    /*
-     * Input test state that may eventually be externalized
-     */
-    final boolean collocateBrokerWithZookeeper = true;
-    final double lowThroughput = 30*ONE_MB;
-    final int replicationFactor = 3;
-    final int numberOfBrokers = 3;
-    Storage storage = Storage.GP2;
-    // if !autoSize, use the default configuration values
-    private boolean autoSize = true;
-
-    /* see https://www.confluent.io/blog/kafka-fastest-messaging-system/#test-setup where they chose 100
-     *
-     * and from https://www.confluent.io/blog/configure-kafka-to-minimize-latency/
-     * "Purely from a throughput perspective, you should be able to get the full throughput from a Kafka cluster with an order of 10 partitions per broker."
-     *
-     * However for baselining higher partitions are not necessary or counterproductive, so we'll start with numberOfBrokers*3
-     */
-    final int nominalPartitionCount = numberOfBrokers*3;
+    public TestParameters testParameters = new TestParameters();
 
     /*
      * primary output state
@@ -289,16 +327,48 @@ public class InstanceProfiler {
     }
 
     private void setup() throws Exception {
+        try (FileInputStream fis = new FileInputStream("test.yaml")) {
+            this.testParameters = Serialization.unmarshal(fis, TestParameters.class);
+        } catch (FileNotFoundException e) {
+            this.testParameters = new TestParameters();
+        }
+
         readResults();
         if (profilingResult.name == null) {
             profilingResult.name = "profile-" + Environment.DATE_FORMAT.format(LocalDateTime.now());
         }
 
-        logDir = new File("target", profilingResult.name);
+        if (testParameters.config == null) {
+            Properties p = new Properties();
+            try (InputStream is = InstanceProfiler.class.getResourceAsStream("/application.properties")) {
+                p.load(is);
+            }
+            if (testParameters.alternativeProfile != null) {
+                try (InputStream is = InstanceProfiler.class.getResourceAsStream(
+                        String.format("/application-%s.properties", testParameters.alternativeProfile))) {
+                    p.load(is);
+                }
+            }
+            if (testParameters.override != null) {
+                p.putAll(testParameters.override);
+            }
+            testParameters.config =
+                    Serialization.jsonMapper().convertValue(p, KafkaInstanceConfiguration.class);
+        }
+
+        if (profilingResult.testParameters == null) {
+            profilingResult.testParameters = testParameters;
+            Files.writeString(Path.of("test.yaml"), Serialization.asYaml(this.testParameters));
+        } else if (!Serialization.asYaml(testParameters).equals(Serialization.asYaml(profilingResult.testParameters))) {
+            throw new IllegalStateException("Test parameters have changed, please save/remove the old results file.");
+        }
+
+        logDir = new File(testParameters.outputDirectory, profilingResult.name);
         Files.createDirectories(logDir.toPath());
 
         kafkaCluster = KubeClusterResource.connectToKubeCluster(PerformanceEnvironment.KAFKA_KUBECONFIG);
-        profilingResult.kafkaNodeType = kafkaCluster.getWorkerNodes().get(0).getMetadata().getLabels().get("node.kubernetes.io/instance-type");
+        profilingResult.kafkaNodeType =
+                kafkaCluster.getWorkerNodes().get(0).getMetadata().getLabels().get("node.kubernetes.io/instance-type");
         kafkaProvisioner = ManagedKafkaProvisioner.create(kafkaCluster);
 
         kafkaProvisioner.setup();
@@ -308,14 +378,19 @@ public class InstanceProfiler {
 
         // TODO: if there is an existing result, make sure it's the same test setup
 
-        profilingResult.ombNodeType = omb.getOmbCluster().getWorkerNodes().get(0).getMetadata().getLabels().get("node.kubernetes.io/instance-type");
+        profilingResult.ombNodeType = omb.getOmbCluster()
+                .getWorkerNodes()
+                .get(0)
+                .getMetadata()
+                .getLabels()
+                .get("node.kubernetes.io/instance-type");
         profilingResult.ombWorkerNodes = omb.getOmbCluster().getWorkerNodes().size();
 
         AvailableResources resources = getMinAvailableResources(omb.getOmbCluster().getWorkerNodes().stream());
 
         // use all available resources on the worker nodes with 2 workers per node
         //if (resources.memoryBytes > 16*ONE_GB || resources.memoryBytes < 8*ONE_GB) {
-            //throw new IllegalStateException("Client instance types are expected to have 16 GB");
+        //throw new IllegalStateException("Client instance types are expected to have 16 GB");
         //}
 
         // assume instead resources that will fit on 2xlarge or xlarge
@@ -328,7 +403,10 @@ public class InstanceProfiler {
         profilingResult.ombWorkerCpu = omb.getWorkerCpu();
         profilingResult.ombWorkerMemory = omb.getWorkerContainerMemory();
 
-        LOGGER.info("OMB Workers will use {} cpu and {} memory requests", omb.getWorkerCpu(), omb.getWorkerContainerMemory());
+        LOGGER.info("OMB Workers will use {} cpu and {} memory requests", omb.getWorkerCpu(),
+                omb.getWorkerContainerMemory());
+
+        createCapacity();
 
         if (profilingResult.completedStep == null) {
             installedProvisioner = true;
@@ -343,7 +421,8 @@ public class InstanceProfiler {
                     a1.cpuMillis = Math.min(a1.cpuMillis, a2.cpuMillis);
                     a1.memoryBytes = Math.min(a1.memoryBytes, a2.memoryBytes);
                     return a1;
-                }).get();
+                })
+                .get();
         return resources;
     }
 
@@ -356,15 +435,17 @@ public class InstanceProfiler {
         // TODO: could be replaced by a switch / statemachine if steps repeat
 
         if (profilingResult.completedStep == Step.SETUP) {
-            sizeInstance();
+            sizeAndUpdateConfig();
             writeResults(Step.SIZE);
         }
 
         deployIfNeeded("profile");
 
+        maxMessageSize();
+
         if (profilingResult.completedStep == Step.SIZE) {
             profilingResult.baselineLatency = determineLatency(workload -> {
-                workload.partitionsPerTopic = nominalPartitionCount;
+                workload.partitionsPerTopic = testParameters.getNominialPartitionCount();
                 workload.name = "latency-baseline";
             });
             // TODO there is a latency value that is potentially relevant at the sustainable throughput,
@@ -373,8 +454,10 @@ public class InstanceProfiler {
         }
 
         if (profilingResult.completedStep == Step.LATENCY) {
-            //determineThroughput(Profile.LATENCY_NO_BATCHING);
-            determineThroughput(Profile.THROUGHPUT);
+            if (!testParameters.config.getKafka().isEnableQuota()) {
+                determineThroughput(LATENCY_NO_BATCHING);
+                determineThroughput(THROUGHPUT);
+            }
             streamingUnitTest();
             writeResults(Step.THROUGHPUT);
         }
@@ -405,7 +488,11 @@ public class InstanceProfiler {
 
     private void deployIfNeeded(String name) throws Exception {
         ManagedKafka mk = null;
-        Resource<ManagedKafka> mkResource = kafkaCluster.kubeClient().client().resources(ManagedKafka.class).inNamespace(Constants.KAFKA_NAMESPACE).withName(name);
+        Resource<ManagedKafka> mkResource = kafkaCluster.kubeClient()
+                .client()
+                .resources(ManagedKafka.class)
+                .inNamespace(Constants.KAFKA_NAMESPACE)
+                .withName(name);
         try {
             mk = mkResource.get();
         } catch (KubernetesClientException e) {
@@ -430,24 +517,26 @@ public class InstanceProfiler {
     }
 
     protected LatencyResult determineLatency(Consumer<Workload> setupModifier) throws Exception {
-        return determineLatency(Profile.LATENCY, setupModifier, null);
+        return determineLatency(LATENCY, setupModifier, null);
     }
 
-    protected LatencyResult determineLatency(Profile profile, Consumer<Workload> setupModifier, BiConsumer<Profile, TestResult> resultConsumer) throws Exception {
-        int pub = nominalPartitionCount;
-        OMBWorkload load = createBasicWorkload(lowThroughput, pub, profile);
+    protected LatencyResult determineLatency(Profile profile, Consumer<Workload> setupModifier,
+            BiConsumer<Profile, TestResult> resultConsumer) throws Exception {
+        int pub = testParameters.getNominialPartitionCount();
+        OMBWorkload load = createBasicWorkload(Quantity.getAmountInBytes(testParameters.ingressPerUnit).longValue() / 2.0,
+                pub, profile);
         load.warmupDurationMinutes = 2;
         load.testDurationMinutes = 4;
         setupModifier.accept(load);
         LatencyResult result = new LatencyResult();
-        result.targetIngressMBs = load.producerRate * load.messageSize / (double)ONE_MB;
+        result.targetIngressMBs = load.producerRate * load.messageSize / (double) ONE_MB;
         result.targetEgressMBs = result.targetIngressMBs * load.subscriptionsPerTopic;
 
         try {
             OMBWorkloadResult loadResult = doTestRun(load.name, load, profile);
             TestResult loadTestResult = loadResult.getTestResult();
             double avgPublishRate = TestUtils.getAvg(loadTestResult.publishRate);
-            double avgPublishThrougput = avgPublishRate*profile.messageSize;
+            double avgPublishThrougput = avgPublishRate * profile.messageSize;
 
             if (!isThroughputAcceptable(load, loadTestResult)) {
                 result.error = new ErrorResult();
@@ -469,8 +558,10 @@ public class InstanceProfiler {
             // TODO validate low throttle / queue / consumer latency
             // TODO a warning if samples are too far off the median
 
-            LOGGER.info(String.format("Result summary for %s consumers / %s partitions latency %,.2f MB/s e2e latency 50: %,.2f median 99: %,.2f 99: %,.2f",
-                    pub, load.partitionsPerTopic, avgPublishThrougput / ONE_MB, loadTestResult.aggregatedEndToEndLatency50pct, result.medianEndToEndLatency99pct,
+            LOGGER.info(String.format(
+                    "Result summary for %s consumers / %s partitions latency %,.2f MB/s e2e latency 50: %,.2f median 99: %,.2f 99: %,.2f",
+                    pub, load.partitionsPerTopic, avgPublishThrougput / ONE_MB,
+                    loadTestResult.aggregatedEndToEndLatency50pct, result.medianEndToEndLatency99pct,
                     loadTestResult.aggregatedEndToEndLatency99pct));
         } catch (Exception e) {
             result.error = new ErrorResult();
@@ -485,11 +576,11 @@ public class InstanceProfiler {
      * see https://www.confluent.io/blog/kafka-fastest-messaging-system/#throughput-test
      */
     protected void determineThroughput(Profile profile) throws Exception {
-        int pub = Math.max(nominalPartitionCount, 2*profilingResult.ombWorkerNodes);
+        int pub = Math.max(testParameters.getNominialPartitionCount(), 2 * profilingResult.ombWorkerNodes);
 
         // start by over producing to get a better guess at producer rate
         // this should also use up burst credits... there's no great way of accounting for this
-        OMBWorkload load = createBasicWorkload(10*ONE_GB, pub, profile);
+        OMBWorkload load = createBasicWorkload(10 * ONE_GB, pub, profile);
         load.warmupDurationMinutes = 3;
         load.testDurationMinutes = 4;
 
@@ -498,7 +589,8 @@ public class InstanceProfiler {
 
         // TODO could include some text output about the average, median, stddev, etc.
 
-        LOGGER.info(String.format("Result summary for %s %s producers/consumers %s", profile, pub, Serialization.asYaml(throughputResult)));
+        LOGGER.info(String.format("Result summary for %s %s producers/consumers %s", profile, pub,
+                Serialization.asYaml(throughputResult)));
 
         profilingResult.throughputResults.put(profile, throughputResult);
 
@@ -514,44 +606,53 @@ public class InstanceProfiler {
         double medianConsumeRate = TestUtils.getMedian(loadTestResult.consumeRate);
 
         ThroughputResult throughputResult = new ThroughputResult();
-        throughputResult.averageProducerMBs = avgPublishRate*profile.messageSize / ONE_MB;
-        throughputResult.averageConsumerMBs = avgConsumeRate*profile.messageSize / ONE_MB;
-        throughputResult.medianProducerMBs = medianPublishRate*profile.messageSize / ONE_MB;
-        throughputResult.medianConsumerMBs = medianConsumeRate*profile.messageSize / ONE_MB;
+        throughputResult.averageProducerMBs = avgPublishRate * profile.messageSize / ONE_MB;
+        throughputResult.averageConsumerMBs = avgConsumeRate * profile.messageSize / ONE_MB;
+        throughputResult.medianProducerMBs = medianPublishRate * profile.messageSize / ONE_MB;
+        throughputResult.medianConsumerMBs = medianConsumeRate * profile.messageSize / ONE_MB;
         return throughputResult;
     }
 
     protected void streamingUnitTest() throws Exception {
         profilingResult.streamingUnit = new StreamingUnitResult();
-        profilingResult.streamingUnit.latency = determineLatency(Profile.LATENCY, workload -> {
-            workload.producerRate = (int) (INGRESS*(numberOfBrokers/3*ONE_MB) / workload.messageSize);
-            workload.subscriptionsPerTopic = EGRESS_MULTIPLE;
+        profilingResult.streamingUnit.latency = determineLatency(LATENCY, workload -> {
+            workload.producerRate =
+                    (int) ((Quantity.getAmountInBytes(testParameters.ingressPerUnit).longValue()
+                            * (testParameters.config.getKafka().isEnableQuota() ? testParameters.quotaIngressPercentage
+                                    : 1)
+                            * testParameters.units)
+                            / workload.messageSize);
+            workload.subscriptionsPerTopic = testParameters.egressMultiple;
             workload.name = "streaming-unit";
             workload.warmupDurationMinutes = 2;
             workload.testDurationMinutes = 10;
-        }, (profile, result) -> {profilingResult.streamingUnit.throughputResult = toThroughputResult(profile, result);});
+        }, (profile, result) -> {
+            profilingResult.streamingUnit.throughputResult = toThroughputResult(profile, result);
+        });
     }
 
     private void writeResults(Step step) throws IOException {
         profilingResult.completedStep = step;
-        Files.write(new File("target", "result.yaml").toPath(), Serialization.asYaml(profilingResult).getBytes(StandardCharsets.UTF_8));
+        Files.writeString(new File(testParameters.outputDirectory, "result.yaml").toPath(), Serialization.asYaml(profilingResult));
     }
 
     private void readResults() throws IOException {
-        File file = new File("target", "result.yaml");
+        File file = new File("result.yaml");
         if (file.exists()) {
             profilingResult = Serialization.unmarshal(Files.readString(file.toPath()), ProfilingResult.class);
         }
     }
 
-    int density = 1;
-
-    protected void sizeInstance() throws Exception {
+    protected void sizeAndUpdateConfig() throws Exception {
         Stream<Node> workerNodes = kafkaCluster.getWorkerNodes().stream();
-        if (!collocateBrokerWithZookeeper){
-            kafkaProvisioner.validateClusterForBrokers(numberOfBrokers, false, workerNodes);
-            workerNodes = kafkaCluster.getWorkerNodes().stream().filter(n -> n.getSpec().getTaints().stream()
-                        .anyMatch(t -> t.getKey().equals(ManagedKafkaProvisioner.KAFKA_BROKER_TAINT_KEY)));
+        if (!testParameters.config.getKafka().isColocateWithZookeeper()) {
+            kafkaProvisioner.validateClusterForBrokers(testParameters.getNumberOfBrokers(), false, workerNodes);
+            workerNodes = kafkaCluster.getWorkerNodes()
+                    .stream()
+                    .filter(n -> n.getSpec()
+                            .getTaints()
+                            .stream()
+                            .anyMatch(t -> t.getKey().equals(ManagedKafkaProvisioner.KAFKA_BROKER_TAINT_KEY)));
         }
 
         // note these number seem to change per release - 4.9 reports a different allocatable, than 4.8
@@ -559,103 +660,101 @@ public class InstanceProfiler {
         long cpuMillis = resources.cpuMillis;
         long memoryBytes = resources.memoryBytes;
 
-        Properties p = new Properties();
-        try (InputStream is = InstanceProfiler.class.getResourceAsStream("/application.properties")) {
-            p.load(is);
-        }
-        KafkaInstanceConfiguration defaults = Serialization.jsonMapper().convertValue(p, KafkaInstanceConfiguration.class);
-
         // when locating with ZK, then reduce the available resources accordingly
-        if (collocateBrokerWithZookeeper){
+        if (testParameters.config.getKafka().isColocateWithZookeeper()) {
             // earlier code making a guess at the page cache size has been removed - until we can more reliably detect it's effect
             // there's no point in making a trade-off between extra container memory and JVM memory
             // TODO: could choose a memory size where we can fit even multiples of zookeepers
-            long zookeeperBytes = Quantity.getAmountInBytes(Quantity.parse(defaults.getZookeeper().getContainerMemory())).longValue();
-            long zookeeperCpu = Quantity.getAmountInBytes(Quantity.parse(defaults.getZookeeper().getContainerCpu())).movePointRight(3).longValue();
+            long zookeeperBytes =
+                    Quantity.getAmountInBytes(Quantity.parse(testParameters.config.getZookeeper().getContainerMemory()))
+                            .longValue();
+            long zookeeperCpu =
+                    Quantity.getAmountInBytes(Quantity.parse(testParameters.config.getZookeeper().getContainerCpu()))
+                            .movePointRight(3)
+                            .longValue();
 
-            List<Long> additionalPodCpu = new ArrayList<>();
-            List<Long> additionalPodMemory = new ArrayList<>();
+            List<Long> cpuResources = new ArrayList<>();
+            List<Long> memoryResources = new ArrayList<>();
 
-            additionalPodCpu.add(Quantity.getAmountInBytes(Quantity.parse(defaults.getCanary().getContainerCpu())).movePointRight(3).longValue());
-            additionalPodMemory.add(Quantity.getAmountInBytes(Quantity.parse(defaults.getCanary().getContainerMemory())).longValue());
-
-            additionalPodCpu.add(Quantity.getAmountInBytes(Quantity.parse(defaults.getAdminserver().getContainerCpu())).movePointRight(3).longValue());
-            additionalPodMemory.add(Quantity.getAmountInBytes(Quantity.parse(defaults.getAdminserver().getContainerMemory())).longValue());
-
-            additionalPodCpu.add(Quantity.getAmountInBytes(Quantity.parse(defaults.getExporter().getContainerCpu())).movePointRight(3).longValue());
-            additionalPodMemory.add(Quantity.getAmountInBytes(Quantity.parse(defaults.getExporter().getContainerMemory())).longValue());
+            containerResources(testParameters.config.getAdminserver(), cpuResources, memoryResources);
+            containerResources(testParameters.config.getExporter(), cpuResources, memoryResources);
+            containerResources(testParameters.config.getCanary(), cpuResources, memoryResources);
 
             LOGGER.info("Total overhead of additional pods {} memory, {} cpu",
-                    additionalPodMemory.stream().collect(Collectors.summingLong(Long::valueOf)),
-                    additionalPodCpu.stream().collect(Collectors.summingLong(Long::valueOf)));
+                    memoryResources.stream().collect(Collectors.summingLong(Long::valueOf)),
+                    memoryResources.stream().collect(Collectors.summingLong(Long::valueOf)));
 
-            // actual needs ~ 800Mi and 1075m/1575m cpu over 3 nodes, but worst case is over two. amountNeeded will
-            // estimate that in a more targeted way - but still simplified
-            memoryBytes = resources.memoryBytes - density*(zookeeperBytes + amountNeeded(additionalPodMemory));
-            cpuMillis = resources.cpuMillis - density*(zookeeperCpu + amountNeeded(additionalPodCpu));
+            Collections.sort(cpuResources);
+            Collections.sort(memoryResources);
+
+            // typical needs ~ 800Mi and 1075m/1575m cpu over 3 nodes, but worst case is over two
+            memoryBytes = resources.memoryBytes
+                    - testParameters.density
+                            * (zookeeperBytes + memoryResources.get(0) + memoryResources.get(2));
+            cpuMillis = resources.cpuMillis - testParameters.density
+                    * (zookeeperCpu + cpuResources.get(0) + cpuResources.get(2));
 
             // TODO account for possible ingress replica collocation
         }
 
         // reserve additional memory to help lessen the fluctuation of resources across openshift versions
         // and if there are eventually pods that need to be collocated, and we don't want to adjust the resources downward
-        if (density == 1) {
-            memoryBytes -= 2*ONE_GB;
+        if (testParameters.density == 1) {
+            memoryBytes -= 2 * ONE_GB;
             cpuMillis -= 500;
         } else {
             // we can assume a much tighter resource utilization for density 2 - it can fluctuate between releases
             // or may require adjustments as other pods are added or pod resource adjustments are made
-            memoryBytes -= 1*ONE_GB;
+            memoryBytes -= 1 * ONE_GB;
             cpuMillis -= 200;
         }
 
-        memoryBytes = memoryBytes/density;
-        cpuMillis = cpuMillis/density;
+        memoryBytes = memoryBytes / testParameters.density;
+        cpuMillis = cpuMillis / testParameters.density;
 
         long maxVmBytes = Math.min(memoryBytes - getVMOverheadForContainer(memoryBytes), MAX_KAFKA_VM_SIZE);
 
-        if (density > 1) {
-            maxVmBytes -= 1*ONE_GB;
+        if (testParameters.density > 1) {
+            maxVmBytes -= 1 * ONE_GB;
         }
 
-        if (!autoSize) {
-            long defaultMemory = Quantity.getAmountInBytes(Quantity.parse(defaults.getKafka().getContainerMemory())).longValue();
-            long defaultCpu = Quantity.getAmountInBytes(Quantity.parse(defaults.getKafka().getContainerCpu())).movePointRight(3).longValue();
-            long defaultMaxVmBytes = Quantity.getAmountInBytes(Quantity.parse(defaults.getKafka().getJvmXms())).longValue();
+        KafkaInstanceConfiguration toUse = Serialization.clone(testParameters.config);
 
-            LOGGER.info("Calculated kafka sizing {} container memory, {} container cpu, and {} vm memory", memoryBytes, cpuMillis, maxVmBytes);
+        LOGGER.info("Calculated kafka sizing {} container memory, {} container cpu, and {} vm memory", memoryBytes,
+                cpuMillis, maxVmBytes);
 
-            memoryBytes = defaultMemory;
-            cpuMillis = defaultCpu;
-            maxVmBytes = defaultMaxVmBytes;
+        if (!testParameters.autoSize) {
+            LOGGER.info("Not using calculated sizes");
+        } else {
+            toUse.getKafka().setContainerCpu(cpuMillis + "m");
+            toUse.getKafka().setJvmXms(String.valueOf(maxVmBytes));
+            toUse.getKafka().setContainerMemory(String.valueOf(memoryBytes));
         }
 
-        KafkaInstanceConfiguration toUse = new KafkaInstanceConfiguration();
-        toUse.getKafka().setEnableQuota(false);
         AdopterProfile.openListenersAndAccess(toUse);
-        toUse.getKafka().setContainerCpu(cpuMillis+"m");
-        toUse.getKafka().setJvmXms(String.valueOf(maxVmBytes));
-        toUse.getKafka().setContainerMemory(String.valueOf(memoryBytes));
 
-        profilingResult.config = toUse;
+        toUse.getKafka().setReplicasOverride(testParameters.getNumberOfBrokers());
 
-        profilingResult.config.getKafka().setColocateWithZookeeper(collocateBrokerWithZookeeper);
+        if (!testParameters.config.getKafka().isEnableQuota()) {
+            toUse.getKafka().setMaxConnections(Integer.MAX_VALUE);
+            toUse.getKafka().setConnectionAttemptsPerSec(Integer.MAX_VALUE);
+        }
 
-        profilingResult.config.getKafka().setMaxConnections(Integer.MAX_VALUE);
-        profilingResult.config.getKafka().setConnectionAttemptsPerSec(Integer.MAX_VALUE);
+        if (testParameters.density > 1) {
+            toUse.getKafka().setOneInstancePerNode(false);
+        }
+        toUse.getKafka().setStorageClass(testParameters.storage.name().toLowerCase());
+        toUse.getZookeeper().setVolumeSize(testParameters.storage.zookeeperSize);
 
-        profilingResult.config.getKafka().setMessageMaxBytes(11534336);
+        Kafka kafka = toUse.getKafka();
+        LOGGER.info("Running with kafka sizing {} container memory, {} container cpu, and {} vm memory",
+                kafka.getContainerMemory(), kafka.getContainerCpu(), kafka.getJvmXms());
 
-        profilingResult.config.getKafka().setStorageClass(storage.name().toLowerCase());
-        profilingResult.config.getZookeeper().setVolumeSize(storage.zookeeperSize);
-
-        // once we make the determination, create the instance
-        profilingResult.capacity = kafkaProvisioner.defaultCapacity(40_000_000); // not used as quota is turned off
-        profilingResult.capacity.setMaxDataRetentionSize(Quantity.parse((GIGS * numberOfBrokers/3) + "Gi"));
-        profilingResult.capacity.setMaxPartitions(defaults.getKafka().getPartitionCapacity()*numberOfBrokers/3);
-
-        Kafka kafka = profilingResult.config.getKafka();
-        LOGGER.info("Running with kafka sizing {} container memory, {} container cpu, and {} vm memory", kafka.getContainerMemory(), kafka.getContainerCpu(), kafka.getJvmXms());
+        if (profilingResult.config == null) {
+            profilingResult.config = toUse;
+        } else if (!Serialization.asYaml(profilingResult.config).equals(Serialization.asYaml(toUse))) {
+            throw new IllegalStateException("Sizing parameters have changed, please save/remove the old results file.");
+        }
 
         // if running on m5.4xlarge or greater and want to constrain resources like m5.2xlarge (fully dedicated)
         //profilingResult.config.getKafka().setContainerMemory("29013426176");
@@ -666,22 +765,22 @@ public class InstanceProfiler {
         //profilingResult.config.getKafka().setContainerCpu("2500m");
     }
 
-    /**
-     * Computes the amount needed assuming that the values will be spread across two nodes
-     * TODO: this is not pathologically correct, nor minimal in our small cases (we're dealing with
-     * only three items currently) - which results in an overestimate, but has been left in to account for
-     * the cpu limit of exporter.
-     * @param additionalPodCpu
-     */
-    private long amountNeeded(List<Long> resources) {
-        Stream<Long> sorted = resources.stream().sorted(Comparator.reverseOrder());
-        long sum = resources.stream().collect(Collectors.summingLong(Long::valueOf));
-        Iterator<Long> iter = sorted.iterator();
-        long running = iter.next();
-        while (running < sum/2) {
-            running += iter.next();
-        }
-        return running;
+    void containerResources(KafkaInstanceConfiguration.Container container, List<Long> cpu, List<Long> memory) {
+        cpu.add(Quantity.getAmountInBytes(Quantity.parse(container.getContainerCpu()))
+                .movePointRight(3)
+                .longValue());
+        memory.add(Quantity.getAmountInBytes(Quantity.parse(container.getContainerMemory()))
+                        .longValue());
+    }
+
+    private void createCapacity() {
+        profilingResult.capacity = kafkaProvisioner.defaultCapacity(
+                Quantity.getAmountInBytes(testParameters.ingressPerUnit).longValue() * testParameters.units);
+        profilingResult.capacity
+                .setMaxDataRetentionSize(Quantity.parse(Quantity.getAmountInBytes(testParameters.dataRetentionPerUnit)
+                        .multiply(BigDecimal.valueOf(testParameters.units))
+                        .toPlainString()));
+        profilingResult.capacity.setMaxPartitions(testParameters.maxPartitionsPerUnit * testParameters.units);
     }
 
     /**
@@ -694,10 +793,14 @@ public class InstanceProfiler {
      *   for a fixed number of consumers -- were they scaling the consumers as well?
      */
     protected void determinePartitions() throws Exception {
-        List<Integer> samples = Arrays.asList(100, 750, 1500, 2000);
-        int maxClients = MAX_CONNECTIONS*(numberOfBrokers/3)/(numberOfBrokers+1);
-        int multiplier = numberOfBrokers/3;
-        for (int sample : samples.stream().map(s -> s*multiplier).collect(Collectors.toList())) {
+        int maxClients = testParameters.getMaxClients();
+        int maxPartitions = testParameters.config.getKafka().getPartitionCapacity() * testParameters.units;
+        if (testParameters.config.getKafka().isEnableQuota()) {
+            maxPartitions = Math.min(maxPartitions, testParameters.maxPartitionsPerUnit * testParameters.units);
+        }
+
+        for (int i = 0; i < 4; i++) {
+            int sample = maxPartitions / 4 * (i + 1);
             try {
                 LOGGER.info("Running latency test for {} partitions", sample);
                 profilingResult.partitionResults.put(sample, determineLatency(workload -> {
@@ -711,28 +814,37 @@ public class InstanceProfiler {
         }
     }
 
-    /*private void determineConsumersPerConsumerGroup() throws Exception {
-        // this is not expected to vary with the number of brokers are every consumer in the consumer group uses a single
-        // broker for coordination
-        List<Integer> samples = Arrays.asList(100, 250, 500);
-        for (int sample : samples) {
-            LOGGER.info("Running latency test for {} consumers", sample);
-            profilingResult.consumers.put(sample, determineLatency(workload -> {
-                workload.consumerPerSubscription = sample;
-                workload.partitionsPerTopic = sample;
-                workload.name = "latency-consumers-" + sample;
-            }));
-        }
-    }*/
+    /*
+     * private void determineConsumersPerConsumerGroup() throws Exception { // this is not expected to vary with the
+     * number of brokers are every consumer in the consumer group uses a single // broker for coordination List<Integer>
+     * samples = Arrays.asList(100, 250, 500); for (int sample : samples) {
+     * LOGGER.info("Running latency test for {} consumers", sample); profilingResult.consumers.put(sample,
+     * determineLatency(workload -> { workload.consumerPerSubscription = sample; workload.partitionsPerTopic = sample;
+     * workload.name = "latency-consumers-" + sample; })); } }
+     */
 
     private void maxMessageSize() throws Exception {
+        int messageMaxBytes = this.testParameters.config.getKafka().getMessageMaxBytes();
+        int dataBytes = messageMaxBytes - 200;
+        String topicConfig = LATENCY.topicConfig + String.format("max.message.bytes=%d%n", messageMaxBytes);
+        String producerConfig = LATENCY.producerConfig + String.format("max.partition.fetch.bytes=%d%nfetch.max.bytes=%d%n", messageMaxBytes, messageMaxBytes);
+        String consumerConfig = LATENCY.consumerConfig + String.format("max.request.size=%d%n", messageMaxBytes);
+
+        File f = File.createTempFile("payload", ".data");
+        f.deleteOnExit();
+        try (RandomAccessFile raf = new RandomAccessFile(f, "rw")) {
+            raf.setLength(dataBytes);
+        }
+
+        Profile profile = new Profile(producerConfig, consumerConfig, topicConfig, dataBytes, f.getPath());
+
         LOGGER.info("Running latency test for max message size");
-        LatencyResult result = determineLatency(Profile.LARGE_MESSAGE, workload -> {
+        LatencyResult result = determineLatency(profile, workload -> {
             workload.name = "latency-max-messagesize";
         }, null);
         this.profilingResult.maxMessage = new MaxMessageResult();
         this.profilingResult.maxMessage.latency = result;
-        this.profilingResult.maxMessage.messageBytes = Profile.LARGE_MESSAGE.messageSize;
+        this.profilingResult.maxMessage.messageBytes = dataBytes;
     }
 
     /*private void determineConsumerGroups() throws Exception {
@@ -748,8 +860,8 @@ public class InstanceProfiler {
     }*/
 
     private void determineProducers() throws Exception {
-        int maxClients = MAX_CONNECTIONS*(numberOfBrokers/3)/(numberOfBrokers+1);
-        List<Integer> samples = Arrays.asList(2*(maxClients/5), maxClients, (maxClients*3)/2);
+        int maxClients = testParameters.getMaxClients();
+        List<Integer> samples = Arrays.asList(2 * (maxClients / 5), maxClients, (maxClients * 3) / 2);
         for (int sample : samples) {
             LOGGER.info("Running latency test for {} producers", sample);
             profilingResult.producers.put(sample, determineLatency(workload -> {
@@ -760,11 +872,13 @@ public class InstanceProfiler {
     }
 
     protected boolean isThroughputAcceptable(OMBWorkload load, TestResult loadTestResult) {
-        boolean consumerThroughputFailed = loadTestResult.consumeRate.stream().anyMatch(r -> r < .9*load.producerRate*load.subscriptionsPerTopic);
+        boolean consumerThroughputFailed = loadTestResult.consumeRate.stream()
+                .anyMatch(r -> r < .9 * load.producerRate * load.subscriptionsPerTopic);
         if (consumerThroughputFailed) {
             LOGGER.info("consumers could not keep up with target rate");
         }
-        boolean producerThroughputFailed = loadTestResult.publishRate.stream().anyMatch(r -> r < .9*load.producerRate);
+        boolean producerThroughputFailed =
+                loadTestResult.publishRate.stream().anyMatch(r -> r < .9 * load.producerRate);
         if (producerThroughputFailed) {
             LOGGER.info("producers could not keep up with target rate");
         }
@@ -776,12 +890,12 @@ public class InstanceProfiler {
      */
     static long getVMOverheadForContainer(long containerBytes) {
         long overhead = 0;
-        if (containerBytes > 2*ONE_GB) {
-            overhead = containerBytes/4;
+        if (containerBytes > 2 * ONE_GB) {
+            overhead = containerBytes / 4;
         } else if (containerBytes > ONE_GB) {
             overhead = ONE_GB / 2;
         } else {
-            overhead = containerBytes/2;
+            overhead = containerBytes / 2;
         }
         return overhead;
     }
@@ -799,13 +913,13 @@ public class InstanceProfiler {
         OMBWorkload ombWorkload = new OMBWorkload()
                 .setName("workload")
                 .setTopics(1)
-                .setPartitionsPerTopic(Math.max(pubSub, nominalPartitionCount))
+                .setPartitionsPerTopic(Math.max(pubSub, testParameters.getNominialPartitionCount()))
                 .setMessageSize(profile.messageSize)
                 .setPayloadFile(profile.payloadFile)
                 .setProducersPerTopic(pubSub)
                 .setSubscriptionsPerTopic(1)
                 .setConsumerPerSubscription(pubSub)
-                .setProducerRate((int) (targetThroughput/profile.messageSize));
+                .setProducerRate((int) (targetThroughput / profile.messageSize));
 
         ombWorkload.keyDistributor = KeyDistributorType.KEY_ROUND_ROBIN;
 
@@ -828,10 +942,12 @@ public class InstanceProfiler {
         // we've autosized the workers for the nodes, so just create 2 workers for each node
         int numberOfWorkers = 2*profilingResult.ombWorkerNodes;
         List<String> instanceWorkers = omb.deployWorkers(numberOfWorkers);
-        assertEquals(numberOfWorkers, instanceWorkers.size(), String.format("failed to create %s omb workers", numberOfWorkers));
+        assertEquals(numberOfWorkers, instanceWorkers.size(),
+                String.format("failed to create %s omb workers", numberOfWorkers));
 
         File instanceDir = new File(logDir, name);
-        assertTrue(instanceDir.mkdir() || instanceDir.exists(), String.format("failed to create directory %s", instanceDir.getName()));
+        assertTrue(instanceDir.mkdir() || instanceDir.exists(),
+                String.format("failed to create directory %s", instanceDir.getName()));
 
         OMBDriver driver = createDriver(instanceBootstrap, profile);
 
@@ -857,10 +973,11 @@ public class InstanceProfiler {
      */
     protected OMBDriver createDriver(String instanceBootstrap, Profile profile) {
         OMBDriver driver = new OMBDriver()
-                .setReplicationFactor(replicationFactor)
+                .setReplicationFactor(testParameters.config.getKafka().getScalingAndReplicationFactor())
                 // insync replicas should not affect latency, so leave at a majority - which may need to change when the number of brokers does
                 // don't retain past 5 minutes, that is beyond any retention we'll need for testing
-                .setTopicConfig(profile.topicConfig)
+                .setTopicConfig(profile.topicConfig + "\nmin.insync.replicas="
+                        + Math.max(1, testParameters.config.getKafka().getScalingAndReplicationFactor() - 1))
                 .setCommonConfigWithBootstrapUrl(instanceBootstrap)
                 .setProducerConfig(profile.producerConfig)
                 .setConsumerConfig(profile.consumerConfig);
